# IDS_term8_LSC_project

./: .gitignore  pyproject.toml  training_classifiers.ipynb
