[project]
name = "proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.8",
    "joblib>=1.5.1",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "optuna>3.0.0",
    "optuna-dashboard>=0.18.0",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "ray[tune]>=2.46.0",
    "scikit-fingerprints>=1.15.0",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
    "wandb>=0.19.11",
    "xgboost>=3.0.2",
]
